Add download capability to guides model. Add regression test to see if downloads work for all the guides.